force-app/main/default/objects/SSR_Opportunity_Owner_Assignment__mdt/SSR_Opportunity_Owner_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Users for Opportunity owner Assignment</description>
    <label>SSR Opportunity Owner Assignment</label>
    <pluralLabel>SSR Opportunity Owner Assignments</pluralLabel>
</CustomObject>