force-app/main/default/objects/SSR_Opportunity_Owner_Assignment__mdt/fields/CHES_Region__c.field-meta.xml
<CustomField>
    <fullName>CHES_Region__c</fullName>
    <label>CHES Region</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>