force-app/main/default/objects/SSR_Opportunity_Owner_Assignment__mdt/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <label>Employee Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>