force-app/main/default/objects/SSR_Opportunity_Owner_Assignment__mdt/fields/Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Operating_Segment__c</fullName>
    <label>Operating Segment</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>